syntax = "proto3";

package brew;

import "buf/validate/validate.proto";

option go_package = "github.com/jany/my-coffee/proto/brew";

enum DrinkStatus {
  DRINK_STATUS_UNSPECIFIED = 0;
  QUEUED = 1;
  GRINDING = 2;
  BREWING = 3;
  FROTHING = 4;
  READY = 5;
}

service BrewService {
  rpc OrderDrink (OrderRequest) returns (OrderResponse);
  rpc ListOrders (ListOrdersRequest) returns(ListOrdersResponse);
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderResponse);
}

message OrderRequest {
  string menu_item_name = 1 [(buf.validate.field).string.min_len = 1];
}

message OrderResponse {
  string order_id = 1;
}

message ListOrdersRequest {
}

message Order {
  string order_id = 1;
  string menu_item_name = 2;
  string status = 3;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

message GetOrderRequest {
  string order_id = 1 [(buf.validate.field).string.min_len = 1];
}

message GetOrderResponse {
  Order order = 1;
}

message UpdateOrderStatusRequest {
  string order_id = 1 [(buf.validate.field).string.min_len = 1];
  DrinkStatus status = 2 [(buf.validate.field).enum.defined_only = true];
}

message UpdateOrderStatusResponse {
  Order order = 1;
}

message DeleteOrderRequest {
  string order_id = 1 [(buf.validate.field).string.min_len = 1];
}

message DeleteOrderResponse {
  bool success = 1;
}